--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %>
+<%= link_to 'Create New Article', new_article_path %>
