--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,3 +10,6 @@
   <%= @article.description %>
 </p>
 
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Destroy', @article, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Return to Articles Listing', articles_path %>
